# okp-mcp

./: .coderabbit.yaml  .env.example  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Containerfile  Containerfile-source  INCORRECT_ANSWER_LOOP.md  Makefile  README.md  SECURITY.md  compose.yaml  lightspeed-stack.yaml  okp_query.py  opencode.json  podman-compose.yaml  podman-compose.yml  pyproject.toml  renovate.json  rpms.in.yaml  rpms.lock.yaml  run.yaml  sonar-project.properties  vulture_allowlist.py
.claude/skills/: add-functional-test.md
.github/: CODEOWNERS
.github/workflows/: build.yml  ci.yml  functional.yml  integration.yml  renovate-konflux.yml  scorecard.yml
.konflux/: requirements-build-all.txt  requirements-build-pypi.txt  requirements-build.txt  requirements.txt
.tekton/: pipeline-build-multiarch.yaml  pull_request.yaml  push.yaml  rhel-knowledge-base-pull-request.yaml  rhel-knowledge-base-push.yaml  rhel-knowledge-bridge-pull-request.yaml  rhel-knowledge-bridge-push.yaml  task-generate-konflux-requirements.yaml  task-get-version.yaml
dev/: nginx.conf
docs/: CONTAINER_BUILD.md  CONTAINER_BUILDS.md  OKP_RAG_EXPLORATION.md  RELEASE_BRANCHES.md  SOLR_EXPLORATION.md  SYN_PRODUCT_FIELD.md  TEKTON_PIPELINES.md  UPDATING_REQUIREMENTS.md
openshift/: okp-mcp.yml  qe-gating-stage-trigger.yml
openshift/dashboards/: grafana-dashboard-okp-mcp-slo.configmap.yaml  grafana-dashboard-okp-mcp.configmap.yaml
quadlet/: README.md  okp-mcp.container  okp-solr-data.volume  okp-solr.container  okp.network
scripts/: container-install.sh  install-toolchain.sh  konflux_requirements.py  konflux_requirements.sh  test-container-startup.sh
src/okp_mcp/: __init__.py  __main__.py  bm25.py  build_info.py  config.py  content.py  embeddings.py  formatting.py  intent.py  metrics.py  models.py  portal.py  request_id.py  server.py  solr.py  telemetry.py  tools.py  types.py
src/okp_mcp/rag/: AGENTS.md  README.md  __init__.py  common.py  context.py  embeddings.py  formatting.py  hybrid.py  lexical.py  models.py  portal.py  rrf.py  semantic.py  tools.py
src/okp_mcp/tools/: __init__.py  document.py  run_code.py  search.py  shared.py
tests/: conftest.py  functional_cases.py  test_bm25.py  test_budget.py  test_build_info.py  test_config.py  test_content.py  test_document.py  test_formatting.py  test_functional.py  test_intent_metrics.py  test_metrics.py  test_portal.py  test_rag_common.py  test_rag_hybrid.py  test_rag_lexical.py  test_rag_rrf.py  test_rag_semantic.py  test_server.py  test_smoke.py  test_solr.py  test_telemetry.py  test_tools.py  test_tools_context.py  test_tools_ctx_logging.py
tests/fixtures/: functional_system_prompt.txt
tests/rag/: __init__.py  conftest.py  test_common.py  test_context.py  test_context_functional.py  test_embeddings.py  test_formatting.py  test_hybrid.py  test_lexical.py  test_models.py  test_portal.py  test_portal_models.py  test_rrf.py  test_search_functional.py  test_semantic.py  test_tools.py
