[project]
name = "okp-mcp"
version = "1.0.2"
description = "MCP server for the Offline Knowledge Portal"
readme = "README.md"
authors = [{ name = "Major Hayden", email = "major@redhat.com" }]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.3.1",
    "httpx",
    "prometheus_client>=0.25.0",
    "pydantic-settings>=2.14.1",
    "rank-bm25",
    "sentry-sdk[httpx]>=2.60.0",
]

[project.scripts]
okp-mcp = "okp_mcp:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.11.17"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-randomly>=4.1.0",
    "pytest-sugar>=1.1.1",
    "pytest-xdist>=3.8.0",
    "radon>=6.0.1",
    "respx>=0.23.1",
    "ruff>=0.15.14",
    "ty>=0.0.39",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "functional: document retrieval tests requiring live Solr (podman-compose up -d)",
]


[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "A", "C4", "SIM", "TID252"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S104"]

[tool.ty.environment]
python-version = "3.12"
