[project]
name = "okp-mcp"
version = "1.0.2"
description = "MCP server for the Offline Knowledge Portal"
readme = "README.md"
authors = [{ name = "Major Hayden", email = "major@redhat.com" }]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.3.1",
    "httpx",
    "prometheus_client>=0.25.0",
    "pydantic-settings>=2.14.1",
    "sentry-sdk[httpx]>=2.60.0",
]

[project.scripts]
okp-mcp = "okp_mcp:main"

[build-system]
requires = ["uv_build>=0.11.18,<0.11.19"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipdb",
    "ipython",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-randomly>=4.1.0",
    "radon>=6.0.1",
    "respx>=0.23.1",
    "ruff>=0.15.14",
    "ty>=0.0.39",
]

[tool.coverage.run]
branch = true
data_file = "coverage/.data"
source = [
    "src",
    "tests",
]

[tool.coverage.html]
directory = "coverage/htmlcov"

[tool.coverage.json]
output = "coverage/coverage.json"

[tool.coverage.xml]
output = "coverage/coverage.xml"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "functional: document retrieval tests requiring live Solr (podman-compose up -d)",
]
addopts = [
    "-r", "a",
    "--verbose",
    "--strict-markers",
    "--cov", "src",
    "--cov", "tests",
    "--cov-report", "html",
    "--cov-report", "term-missing:skip-covered",
    "--durations-min", "1",
    "--durations", "10",
    "--color", "yes",
    "--showlocals",
    "--pdbcls", "IPython.terminal.debugger:TerminalPdb",
]


[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "A",      # flake8-builtins
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "RUF100", # unused noqa directives
    "S",      # flake8-bandit (security)
    "SIM",    # flake8-simplify
    "TID252", # ban relative imports
    "UP",     # pyupgrade
    "W",      # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S104"]

[tool.ty.environment]
python-version = "3.12"
